--- a/docs/style.css
+++ b/docs/style.css
@@ -83,9 +83,11 @@ p {
 }
 
 .markdown-section strong,
-blockquote p,
-li {
+blockquote p {
   color: var(--textColor) !important;
+}
+li {
+  color: var(--docsify_dark_mode_code_color);
 }
 .markdown-section p.warn {
   color: var(--theme-color);
