style non active links

--- a/docs/style.css
+++ b/docs/style.css
@@ -113,3 +113,9 @@ a.app-name-link,
 .app-nav li {
   color: var(--docsify_dark_mode_header) !important;
 }
+.app-nav li ul a.active {
+  font-weight: bold;
+}
+.app-nav li ul a {
+  color: #20202f;
+}
